@@ -329,8 +329,8 @@ Extrusion::build ()
 
 	// Build body.
 	
-	const float maxCrossSection = crossSection () .size () - 1;
-	const float maxSpine        = spine () .size () - 1;
+	const float numCrossSection_1 = crossSection () .size () - 1;
+	const float numSpine_1        = spine () .size () - 1;
 
 	for (size_t n = 0, size = spine () .size () - 1; n < size; ++ n)
 	{
@@ -348,25 +348,25 @@ Extrusion::build ()
 			// p1 ----- p2   n
 
 			// p1
-			getTexCoords () [0] .emplace_back (k / maxCrossSection, n / maxSpine, 0, 1);
+			getTexCoords () [0] .emplace_back (k / numCrossSection_1, n / numSpine_1, 0, 1);
 			coordIndex .emplace_back (INDEX (n, k));
 			normalIndex [coordIndex .back ()] .emplace_back (getNormals () .size ());
 			getNormals () .emplace_back (math::normal (points [INDEX (n1, k)], points [INDEX (n, k)], points [INDEX (n, k1)]));
 
 			// p2
-			getTexCoords () [0] .emplace_back ((k + 1) / maxCrossSection, n / maxSpine, 0, 1);
+			getTexCoords () [0] .emplace_back ((k + 1) / numCrossSection_1, n / numSpine_1, 0, 1);
 			coordIndex .emplace_back (INDEX (n, k1));
 			normalIndex [coordIndex .back ()] .emplace_back (getNormals () .size ());
 			getNormals () .emplace_back (math::normal (points [INDEX (n, k)], points [INDEX (n, k1)], points [INDEX (n1, k1)]));
 
 			// p3
-			getTexCoords () [0] .emplace_back ((k + 1) / maxCrossSection, (n + 1) / maxSpine, 0, 1);
+			getTexCoords () [0] .emplace_back ((k + 1) / numCrossSection_1, (n + 1) / numSpine_1, 0, 1);
 			coordIndex .emplace_back (INDEX (n1, k1));
 			normalIndex [coordIndex .back ()] .emplace_back (getNormals () .size ());
 			getNormals () .emplace_back (math::normal (points [INDEX (n, k1)], points [INDEX (n1, k1)], points [INDEX (n1, k)]));
 
 			// p4
-			getTexCoords () [0] .emplace_back (k / maxCrossSection, (n + 1) / maxSpine, 0, 1);
+			getTexCoords () [0] .emplace_back (k / numCrossSection_1, (n + 1) / numSpine_1, 0, 1);
 			coordIndex .emplace_back (INDEX (n1, k));
 			normalIndex [coordIndex .back ()] .emplace_back (getNormals () .size ());
 			getNormals () .emplace_back (math::normal (points [INDEX (n1, k1)], points [INDEX (n1, k)], points [INDEX (n, k)]));
